--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jss": "^10.0.0",
+    "components": "^0.1.0",
     "hyperscript": "^2.0.2",
     "jss": "^10.4.0",
     "jss-preset-default": "^10.4.0",
@@ -18,6 +18,17 @@
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
+    "@types/jss": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "babel-core": "^6.26.3",
+    "babel-plugin-jsx-pragmatic": "^1.0.2",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^7.11.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.22.1",
+    "link-module-alias": "^1.2.0",
     "typescript": "^4.0.3"
   }
 }
