--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1",
-	"start": "parcel ./index.html"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel ./index.html"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +29,7 @@
     "eslint": "^7.11.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.5.3",
     "link-module-alias": "^1.2.0",
     "typescript": "^4.0.3"
   }
