--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "inimore-cont",
   "version": "1.0.0",
-  "description": "",
+  "description": "Seed project for a front end project using custom jsx compilation, typescript, and jest",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel ./index.html"
   },
   "keywords": [],
-  "author": "",
+  "author": "Isaac Welch",
   "license": "ISC",
   "dependencies": {
     "components": "^0.1.0",
