--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "inimore-cont",
-  "version": "1.0.0",
-  "description": "Seed project for a front end project using custom jsx compilation, typescript, and jest",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel ./index.html"
-  },
-  "keywords": [],
-  "author": "Isaac Welch",
-  "license": "ISC",
-  "dependencies": {
-    "components": "^0.1.0",
-    "hyperscript": "^2.0.2",
-    "jss": "^10.4.0",
-    "jss-preset-default": "^10.4.0",
-    "parcel": "^1.12.4",
-    "rxjs": "^6.6.3"
-  },
-  "devDependencies": {
-    "@types/jss": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "babel-core": "^6.26.3",
-    "babel-plugin-jsx-pragmatic": "^1.0.2",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^7.11.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.5.3",
-    "link-module-alias": "^1.2.0",
-    "typescript": "^4.0.3"
-  }
+	"name": "inimore-cont",
+	"version": "1.0.0",
+	"description": "Seed project for a front end project using custom jsx compilation, typescript, and jest",
+	"main": "index.js",
+	"scripts": {
+		"start": "parcel ./index.html",
+		"build": "parcel build index.html"
+	},
+	"keywords": [],
+	"author": "Isaac Welch",
+	"license": "ISC",
+	"dependencies": {
+		"babel-preset-react": "^6.24.1",
+		"components": "^0.1.0",
+		"hyperscript": "^2.0.2",
+		"jss": "^10.4.0",
+		"jss-preset-default": "^10.4.0",
+		"parcel": "^1.12.4",
+		"rxjs": "^6.6.3"
+	},
+	"devDependencies": {
+		"@types/jest": "^26.0.14",
+		"@types/jss": "^10.0.0",
+		"@typescript-eslint/eslint-plugin": "^4.4.1",
+		"@typescript-eslint/parser": "^4.4.1",
+		"babel-core": "^6.26.3",
+		"babel-jest": "^26.5.2",
+		"babel-plugin-jsx-pragmatic": "^1.0.2",
+		"babel-plugin-transform-react-jsx": "^6.24.1",
+		"babel-preset-env": "^1.7.0",
+		"eslint": "^7.11.0",
+		"eslint-import-resolver-alias": "^1.1.2",
+		"eslint-plugin-import": "^2.22.1",
+		"jest": "^26.5.3",
+		"jest-transform-stub": "^2.0.0",
+		"link-module-alias": "^1.2.0",
+		"typescript": "^4.0.3"
+	}
 }
